--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,41 @@
 # Ansible
 *.retry
-*.pyc
+
+# Python
 __pycache__/
-.pytest_cache/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Vault files
-*.vault
-vault.yml
-group_vars/*/vault.yml
-host_vars/*/vault.yml
+# Virtual environments
+venv/
+env/
+ENV/
 
-# Collection build artifacts
-cheg-ansible_collection-*.tar.gz
-*.zip
-
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
@@ -31,7 +45,3 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
-
-# Backup files
-*.bak
-*.backup
