--- a/roles/postgresql/tasks/users.yml
+++ b/roles/postgresql/tasks/users.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create PostgreSQL users
-  postgresql_user:
+  community.postgresql.postgresql_user:
     name: "{{ item.name }}"
     password: "{{ item.password }}"
     login_host: localhost
@@ -15,7 +15,7 @@
   when: item.password is defined
 
 - name: Grant database privileges to users
-  postgresql_privs:
+  community.postgresql.postgresql_privs:
     db: "{{ item.db }}"
     login_host: localhost
     login_user: "{{ postgresql_admin_user }}"
